add support for optional computed properties
