# examples/swaggercodegen/api/api/cdn.go
@@ -73,6 +73,9 @@ func populateComputePropertiesCDN(cdn *ContentDeliveryNetworkV1) {
 	cdn.ObjectNestedSchemeProperty = &ContentDeliveryNetworkV1ObjectNestedSchemeProperty{
 		Name: "autogenerated name",
 	}
+	if cdn.OptionalComputed == "" {
+		cdn.OptionalComputed = "some computed value"
+	}
 }
 
 func validateMandatoryFields(cdn *ContentDeliveryNetworkV1) error {
@@ -100,6 +103,12 @@ func updateCDN(dbCDN, updatedCDN *ContentDeliveryNetworkV1) {
 	dbCDN.ExampleBoolean = updatedCDN.ExampleBoolean
 	dbCDN.ObjectProperty = updatedCDN.ObjectProperty
 	dbCDN.ArrayOfObjectsExample = updatedCDN.ArrayOfObjectsExample
+	if updatedCDN.OptionalComputed != "" {
+		dbCDN.OptionalComputed = updatedCDN.OptionalComputed
+	} else {
+		dbCDN.OptionalComputed = "some computed value"
+	}
+	dbCDN.OptionalProperty = updatedCDN.OptionalProperty
 	db[dbCDN.Id] = dbCDN
 }
 
